Fix Java and Gradle deprecations in Bob (#13174)
Replace deprecated Java and protobuf APIs while preserving builder error
handling, optional resource semantics, and extension compatibility.

Resolve build settings during Gradle configuration, configure the proto
command before execution, and update deprecated test logging syntax and
JUnit matchers. Add regression coverage for constructor and URL errors.

Validated light and full Bob builds with --warning-mode fail, all 549 Bob
tests, standalone proto generation, and single-test selection.